WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172290
DFG inlining should be hardened for the no-result case
https://bugs.webkit.org/show_bug.cgi?id=172290
Summary
DFG inlining should be hardened for the no-result case
Filip Pizlo
Reported
2017-05-18 10:09:59 PDT
Patch forthcoming.
Attachments
the patch
(24.86 KB, patch)
2017-05-18 10:13 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-05-18 10:13:45 PDT
Created
attachment 310514
[details]
the patch
Saam Barati
Comment 2
2017-05-18 10:41:19 PDT
Comment on
attachment 310514
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310514&action=review
r=me
> Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:76 > + if (!(assertion)) { \
UNLIKELY here?
Filip Pizlo
Comment 3
2017-05-18 10:43:57 PDT
(In reply to Saam Barati from
comment #2
)
> Comment on
attachment 310514
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=310514&action=review
> > r=me > > > Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:76 > > + if (!(assertion)) { \ > > UNLIKELY here?
OK!
Filip Pizlo
Comment 4
2017-05-18 10:46:58 PDT
Landed in
http://trac.webkit.org/changeset/217050/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug